// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 1`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 2,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": [],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 2`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 3,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": [
    {
      "TANotes": "",
      "id": 2,
      "name": "User Person",
      "photoURL": "https://example.com",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 3`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 4,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": null,
  "queueSize": 0,
  "room": "room 4",
  "staffList": [
    {
      "TANotes": "",
      "id": 2,
      "name": "User Person",
      "photoURL": "https://example.com",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets office hours no queues, since no queue is happening right now 1`] = `
{
  "asyncQuestionDisplayTypes": [],
  "coordinator_email": null,
  "courseInviteCode": "invite-code",
  "deletedAt": null,
  "enabled": true,
  "heatmap": false,
  "icalURL": "https://calendar.google.com/calendar/ical/t6lu2pic7u9otrbpkuk26sl34g%40group.calendar.google.com/public/basic.ics",
  "id": 1,
  "isCourseInviteEnabled": true,
  "name": "CS 304",
  "organizationCourse": null,
  "questionTimer": null,
  "queues": [],
  "sectionGroupName": "001",
  "selfEnroll": false,
  "semesterId": 1,
  "superCourseId": null,
  "timezone": "America/New_York",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 1`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 2,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": [],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 2`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 3,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": [
    {
      "TANotes": "",
      "id": 2,
      "name": "User Person",
      "photoURL": "https://example.com",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 3`] = `
{
  "allowQuestions": false,
  "config": {},
  "courseId": 1,
  "id": 4,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": null,
  "queueSize": 0,
  "room": "room 4",
  "staffList": [
    {
      "TANotes": "",
      "id": 2,
      "name": "User Person",
      "photoURL": "https://example.com",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id/export-tool-usage should export tool usage data grouped by day 1`] = `
[
  {
    "count": "3",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/15",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/15",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/16",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/16",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
]
`;

exports[`Course Integration GET /courses/:id/export-tool-usage should export tool usage data grouped by week with all tool types 1`] = `
[
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 4,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 4,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 4,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "anytime_questions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 4,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 3,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 4,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 2,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 4,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "chatbot_interactions",
    "user_id": 2,
  },
]
`;

exports[`Course Integration GET /courses/:id/export-tool-usage should handle large dataset with multiple students and time periods 1`] = `
[
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 8,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 9,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 7,
  },
  {
    "count": "3",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 11,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "3",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 10,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 5,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 6,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2025/12/29",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 5,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 9,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 10,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 8,
  },
  {
    "count": "3",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 11,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 6,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 7,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/05",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 11,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 10,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 5,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 7,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 9,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 6,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/12",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 8,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 4,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 10,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 5,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 6,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 9,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 7,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 2,
  },
  {
    "count": "2",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 11,
  },
  {
    "count": "1",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 8,
  },
  {
    "count": "0",
    "course_name": "CS 304",
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "period_date": "2026/01/19",
    "period_time": "00:00",
    "tool_type": "queue_questions",
    "user_id": 3,
  },
]
`;

exports[`Course Integration POST /courses/:id/checkin/:qid checks a TA into an existing queue 1`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": 1,
  "id": 1,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "Online",
  "staffList": [
    {
      "TANotes": "",
      "id": 1,
      "name": "User Person",
      "photoURL": "https://example.com",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 1`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": "example note 1",
  "queueSize": 0,
  "room": "abcd1",
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 2`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": "example note 7",
  "queueSize": 0,
  "room": "abcd2",
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 3`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": "ta queue",
  "queueSize": 0,
  "room": "abcd3",
  "type": "hybrid",
  "zoomLink": null,
}
`;
